# aoc2024

./: Cargo.toml  README.md
.cargo/: config.toml
days/day01/: Cargo.toml
days/day01/src/: main.rs
days/day02/: Cargo.toml
days/day02/src/: main.rs
days/day03/: Cargo.toml
days/day03/src/: main.rs
days/day04/: Cargo.toml
days/day04/src/: main.rs
days/day05/: Cargo.toml
days/day05/src/: main.rs
days/day06/: Cargo.toml
days/day06/src/: main.rs
days/day07/: Cargo.toml
days/day07/src/: main.rs
days/day08/: Cargo.toml
days/day08/src/: main.rs
days/day09/: Cargo.toml
days/day09/src/: main.rs
days/day10/: Cargo.toml
days/day10/src/: main.rs
days/day11/: Cargo.toml
days/day11/src/: main.rs
days/day12/: Cargo.toml
days/day12/src/: main.rs
days/day13/: Cargo.toml
days/day13/src/: main.rs
days/day14/: Cargo.toml
days/day14/src/: main.rs
days/day15/: Cargo.toml
days/day15/src/: main.rs
days/day16/: Cargo.toml
days/day16/src/: main.rs
days/day17/: Cargo.toml
days/day17/src/: main.rs
days/day18/: Cargo.toml
days/day18/src/: main.rs
days/day19/: Cargo.toml
days/day19/src/: main.rs
days/day20/: Cargo.toml
days/day20/src/: main.rs
days/day21/: Cargo.toml
days/day21/src/: main.rs
days/day22/: Cargo.toml
days/day22/src/: main.rs
days/day23/: Cargo.toml
days/day23/src/: main.rs
days/day24/: Cargo.toml
days/day24/src/: main.rs
days/day25/: Cargo.toml
days/day25/src/: main.rs
helpers/: Cargo.toml
helpers/src/: better_sum.rs  consume.rs  direction.rs  lib.rs  rand_ext.rs
solver-interface/: Cargo.toml
solver-interface/src/: child.rs  lib.rs  parent.rs
src/: error.rs  lib.rs  main.rs  runner.rs
