[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
clap_complete = "4.5.0"
html-escape = "0.2.13"
ureq = "2.9.5"
regex.workspace = true
thiserror.workspace = true
solver-interface.workspace = true
notify = "6.1.1"

[workspace]
members = ["solver-interface", "helpers", "days/*"]

[workspace.dependencies]
solver-interface = { path = "solver-interface" }
helpers = { path = "helpers" }
bincode = "2.0.0-rc.3"
primal = "0.3.2"
num-integer = "0.1.46"
regex = "1.10.3"
itertools = "0.12.1"
rustc-hash = "1.1.0"
rayon = "1.8.1"
arrayvec = "0.7.4"
bytemuck = "1.14.3"
thiserror = "1.0.57"
