cargo-features = ["edition2024"]

[package]
name = "aoc2024"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.0", features = ["derive", "cargo"] }
clap_complete = "4.5.0"
html-escape = "0.2.13"
notify = "6.1.1"
regex.workspace = true
solver-interface.workspace = true
thiserror.workspace = true
ureq = "2.9.5"

[workspace]
members = ["solver-interface", "helpers", "days/*"]

[workspace.dependencies]
arrayvec = "0.7.4"
bincode = "2.0.0-rc.3"
bstr = "1.9.1"
bytemuck = "1.14.3"
helpers = { path = "helpers" }
itertools = "0.12.1"
num-integer = "0.1.46"
primal = "0.3.2"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xorshift = "0.3.0"
rayon = "1.8.1"
regex = "1.10.3"
rustc-hash = "1.1.0"
solver-interface = { path = "solver-interface" }
thiserror = "1.0.57"


[lints.clippy]
large_stack_arrays = "warn"
