[package]
edition = "2024"
name = "aoc2024"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
clap_complete = "4.5.38"
helpers.workspace = true
html-escape = "0.2.13"
notify = "7.0.0"
regex.workspace = true
solver-interface.workspace = true
thiserror.workspace = true
ureq = "2.11.0"

[workspace]
members = ["solver-interface", "helpers", "days/*"]

[workspace.dependencies]
arrayvec = "0.7.6"
bincode = "2.0.0-rc.3"
bstr = "1.11.0"
bytemuck = "1.20.0"
helpers = { path = "helpers" }
itertools = "0.13.0"
num-integer = "0.1.46"
primal = "0.3.3"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xorshift = "0.3.0"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.0.0"
solver-interface = { path = "solver-interface" }
thiserror = "2.0.3"

[lints.clippy]
large_stack_arrays = "warn"
